test/simple/correct/Lambda1.hs
module Lambda1 where

main :: Int
main = (\1 (x:xs) -> x) 1 [3]
