test/simple/typeerrors/Examples/PatConstructor.hs
module PatConstructor where

f :: Bool -> Int
f ((:) x xs) = 3
